--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Tic Tac Toe Game</h1>
+        <h1 id = "heading" >Tic Tac Toe Game</h1>
     </header>
     <main>
         <div class="start-up">
